--- a/app/src/main/java/study/aa.html
+++ b/app/src/main/java/study/aa.html
@@ -36,6 +36,7 @@
         }
 
         function reset() {
+            clearInterval(timerStart);
             stopWatch.innerText = '00:00.00';
         }
     </script>
